Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1990

drain gets stuck on

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.26.0
    • proton-c-0.27.0
    • cpp-binding

    Description

      See http://qpid.2158936.n2.nabble.com/Drain-issue-in-proton-C-td7681843.html

       

      When draining a receiver link in the proton c++ api, if there are insuffficient messages on the source, the draining mode gets stuck on so that subsequent granting of credit causes the credit to be immediately drained.

      This appears to be due to the flag not being set on the pn_link_t instance.

       

      Attachments

        1. drain.patch
          0.5 kB
          Gordon Sim

        Activity

          People

            cliffjansen Clifford Jansen
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: