PROTON-1990: C++ credit draining fails to toggle off in 2/3 of possible cases